# La_grande_folie

./: .gitignore  README.md  launch.py  launch_game.sh  minimal_logiciel.py  pyproject.toml
.github/workflows/: main.yml
Test/: test_cultiver.py  test_ferme.py
src/ferme/: Finance_manager.py  __init__.py  cultiver.py  employer.py  minimal_logiciel.py  patate.py  strategie.py  usine.py
