[project]
name = "ferme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "OuiCeMoi", email = "guillaumebefre35@gmail.com" }
]
requires-python = ">=3.13"
dependencies = ["chronobio"]

[project.scripts]
ferme = "ferme:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]
